--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -5,3 +5,6 @@ Icon=icon-launcher-notes
 Exec=invoker --type=silica-qt5 -s /usr/bin/jolla-notes
 X-MeeGo-Logical-Id=notes-de-name
 X-MeeGo-Translation-Catalog=notes
+X-Maemo-Service=com.jolla.notes
+X-Maemo-Object-Path=/
+X-Maemo-Method=com.jolla.notes.activateWindow
