--- a/jolla-notes-import.desktop
+++ b/jolla-notes-import.desktop
@@ -1,11 +1,12 @@
 [Desktop Entry]
 Type=Application
 NoDisplay=true
-Name=Plaintext and vNote File MimeHandler
+Name=Notes
 Icon=icon-launcher-notes
-Exec=invoker --type=silica-qt5 -s /usr/bin/jolla-notes
 Comment=Sailfish MimeType handler for plain-text files and vNote files
 MimeType=text/plain;text/x-vnote;
+X-MeeGo-Logical-Id=notes-de-name
+X-MeeGo-Translation-Catalog=notes
 X-Maemo-Service=com.jolla.notes
 X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.importNoteFile
