[notes] Add Sharing permission. Fixes JB#52177
Permissions for account creation will be fixed in the task JB#52174

Privileged permission do not work currently if it would be part
of the Sharing permissions itself.

--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -8,7 +8,8 @@ X-MeeGo-Translation-Catalog=notes
 X-Maemo-Service=com.jolla.notes
 X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.activateWindow
+
 [X-Sailjail]
-Permissions=Notes
+Permissions=Notes,Sharing,Privileged
 OrganizationName=com.jolla
 ApplicationName=notes
