--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -8,8 +8,7 @@ X-MeeGo-Translation-Catalog=notes
 X-Maemo-Service=com.jolla.notes
 X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.activateWindow
-
 [X-Sailjail]
-Permissions=Notes,Sharing,Privileged
+Permissions=Notes;Sharing;Privileged
 OrganizationName=com.jolla
 ApplicationName=notes
