[notes] Remove Notes permission. Contributes to JB#52153
Signed-off-by: Tomi Leppänen <tomi.leppanen@jolla.com>

--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -9,6 +9,6 @@ X-Maemo-Service=com.jolla.notes
 X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.activateWindow
 [X-Sailjail]
-Permissions=Notes;Sharing;Privileged
+Permissions=Sharing;Privileged
 OrganizationName=com.jolla
 ApplicationName=notes
