--- a/com.jolla.notes.service
+++ b/com.jolla.notes.service
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=com.jolla.notes
-Exec=/usr/bin/invoker -s -n -d 5 --type=generic /usr/bin/sailjail -p jolla-notes.desktop /usr/bin/jolla-notes -prestart
+Exec=/usr/bin/invoker -s --type=generic /usr/bin/sailjail -p jolla-notes.desktop /usr/bin/jolla-notes -prestart
