[jolla-notes] Remove separate .desktop files for MIME type handling. OMP#JOLLA-138 JB#54217
A single file per application makes it possible to inspect the
permissions of the application handling a MIME type without having to do
a secondary resolution to find the file with the permissions.

--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -3,11 +3,12 @@ Type=Application
 Name=Notes
 Icon=icon-launcher-notes
 Exec=/usr/bin/sailjail -p jolla-notes.desktop /usr/bin/jolla-notes
+MimeType=text/plain;text/x-vnote;
 X-MeeGo-Logical-Id=notes-de-name
 X-MeeGo-Translation-Catalog=notes
 X-Maemo-Service=com.jolla.notes
 X-Maemo-Object-Path=/
-X-Maemo-Method=com.jolla.notes.activateWindow
+X-Maemo-Method=com.jolla.notes.openUrl
 [X-Sailjail]
 Permissions=Sharing;Privileged
 OrganizationName=com.jolla
