[notes] Add UserDirs permission. JB#54876 OMP#JOLLA-239
Add UserDirs permission to allow sharing from any of those directories.

Signed-off-by: Tomi Leppänen <tomi.leppanen@jolla.com>

--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -9,7 +9,8 @@ X-MeeGo-Translation-Catalog=notes
 X-Maemo-Service=com.jolla.notes
 X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.openUrl
+
 [X-Sailjail]
-Permissions=Sharing
+Permissions=Sharing;UserDirs
 OrganizationName=com.jolla
 ApplicationName=notes
