[jolla-notes] Remove unneeded Sharing permission. JB#55380
Sharing is allowed by default, separate permission is not needed.

Signed-off-by: Simo Piiroinen <simo.piiroinen@jolla.com>

--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -11,6 +11,6 @@ X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.openUrl
 
 [X-Sailjail]
-Permissions=Sharing;UserDirs
+Permissions=UserDirs
 OrganizationName=com.jolla
 ApplicationName=notes
