--- a/com.jolla.notes.service
+++ b/com.jolla.notes.service
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2015 - 2021 Jolla Ltd.
+# SPDX-FileCopyrightText: 2025 Jolla Mobile Ltd
+#
+# SPDX-License-Identifier: BSD-3-Clause
+
 [D-BUS Service]
 Name=com.jolla.notes
 Exec=/usr/bin/invoker -s --type=generic /usr/bin/sailjail -p jolla-notes.desktop /usr/bin/jolla-notes -prestart
