[jolla-notes] Add a mKCal provider.
Implement a VJOURNAL provider based on mKCal.
Use this provider to display notes synced with
a NextCloud server, based on the Buteo sync
plugin mKCal location for notes.

--- a/jolla-notes.desktop
+++ b/jolla-notes.desktop
@@ -16,6 +16,6 @@ X-Maemo-Object-Path=/
 X-Maemo-Method=com.jolla.notes.openUrl
 
 [X-Sailjail]
-Permissions=UserDirs
+Permissions=UserDirs;Accounts;Privileged
 OrganizationName=com.jolla
 ApplicationName=notes
